add vscode cmake support
when compiling with cmake, -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
this will generate 'compile_commands.json'
which will be used for .vscode/c_cpp_properties.json
which, will help vscode, to find include directories
thus giving smarter auto completion

Also removed cmake/Modules/FindCaffe.cmake
Caffe should be compiled personally with cmake
and then paste its installed folder to CMakeLists.txt

--- a/cmake_examples/caffe_cpp_play_better/CMakeLists.txt
+++ b/cmake_examples/caffe_cpp_play_better/CMakeLists.txt
@@ -94,7 +94,8 @@ endif()
 #
 ##################################
 if (use_caffe)
-    list(APPEND CMAKE_PREFIX_PATH "/home/zz/work/caffe-BVLC/build_cmake/install")
+    #list(APPEND CMAKE_PREFIX_PATH "/home/zz/work/caffe-BVLC/build_cmake/install")
+    list(APPEND CMAKE_PREFIX_PATH "/home/zz/work/chris_rcf/build_cmake/install")
     find_package (Caffe REQUIRED)       #OK
     message(STATUS "Caffe library status:")
     message(STATUS "    Caffe_DIR: ${Caffe_DIR}")
@@ -124,9 +125,11 @@ INCLUDE_DIRECTORIES(${Caffe_INCLUDE_DIRS})
 
 # 添加可执行文件
 #add_executable(im_cls src/im_cls.cpp)
-add_executable(blob_demo src/blob_demo.cpp)
+#add_executable(blob_demo src/blob_demo.cpp)
+add_executable(net_demo src/net_demo.cpp)
 
 # Link your application with OpenCV libraries
 # message("!!! PROJ_LINKER_LIBS: ${PROJ_LINKER_LIBS}")
 #target_link_libraries(im_cls ${PROJ_LINKER_LIBS})
-target_link_libraries(blob_demo ${PROJ_LINKER_LIBS})
+#target_link_libraries(blob_demo ${PROJ_LINKER_LIBS})
+target_link_libraries(net_demo ${PROJ_LINKER_LIBS})
